--- a/message.html
+++ b/message.html
@@ -30,17 +30,16 @@ h1{
 
 <body>
 
-<h1>Anjali ❤️</h1>
+<h1>Santhiya ❤️</h1>
 <p id="text"></p>
 
 <button onclick="nextPage()">Forgive Me 💕</button>
 
 <script>
-const message = `Heyy Paithiyam I LOVE YOU dii..💕
+const message = `Heyy Lusu..💕
 I love your character, the way you love me and care for me every single day.
-If I ever hurt you, I am truly sorry.
-You are my happiness and my forever Paithiyam 😜❤️
-Sorry dii Chlm..🥺`;
+If I ever hurt you,
+You are my happiness and my forever Love `;
 
 let i=0;
 function typeWriter(){
@@ -53,7 +52,7 @@ function typeWriter(){
 typeWriter();
 
 function nextPage(){
-    window.location.href="memory.html";
+    window.location.href="index.html";
 }
 </script>
 
