--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@ button{
 
 <body>
 
-<h1>Heyy Santhiya 😘</h1>
+<h1>Heyy Sandhiya 😘</h1>
 <h1 class="main-question">
-Will you br my Life and stay with me forever 💕
+Will you be my Life and stay with me forever 💕
 </h1>
 
 <div class="emoji">💕😍</div>
