--- a/message.html
+++ b/message.html
@@ -30,16 +30,17 @@ h1{
 
 <body>
 
-<h1>Santhiya ❤️</h1>
+<h1>Sandhiya ❤️</h1>
 <p id="text"></p>
 
-<button onclick="nextPage()">Forgive Me 💕</button>
+<button onclick="nextPage()">Stay By Me 💕</button>
 
 <script>
-const message = `Heyy Lusu..💕
-I love your character, the way you love me and care for me every single day.
-If I ever hurt you,
-You are my happiness and my forever Love `;
+const message = `You are the best thing that ever happened to me.
+Your smile makes my whole world brighter.
+With you, everything feels right.
+I am so lucky to have you.
+I love you more than words can say ❤️ `;
 
 let i=0;
 function typeWriter(){
